[project]
name = "nz.liddle.me"
version = "0.0.1"
authors = [
  { name="Master Liddle", email="marcus@liddle.gen.nz" },
]
description = "A Liddle example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"